Herstel package.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     // Voeg hier eventuele afhankelijkheden toe
   },
-  "author": "Ayoub Ben addou",
+  "author": "Jouw Naam",
   "license": "MIT"
 }
 
